syntax = "proto3";

option csharp_namespace = "Chillax.Basket.API.Grpc";

package BasketApi;

service Basket {
    rpc GetBasket(GetBasketRequest) returns (CustomerBasketResponse) {}
    rpc UpdateBasket(UpdateBasketRequest) returns (CustomerBasketResponse) {}
    rpc DeleteBasket(DeleteBasketRequest) returns (DeleteBasketResponse) {}
}

message GetBasketRequest {
}

message CustomerBasketResponse {
    repeated BasketItem items = 1;
}

// Represents a customization option selected for a basket item
message BasketItemCustomization {
    int32 customization_id = 1;
    string customization_name = 2;
    int32 option_id = 3;
    string option_name = 4;
    double price_adjustment = 5;
}

message BasketItem {
    int32 product_id = 1;
    int32 quantity = 2;
    string special_instructions = 3;
    repeated BasketItemCustomization selected_customizations = 4;
}

message UpdateBasketRequest {
    repeated BasketItem items = 1;
}

message DeleteBasketRequest {
}

message DeleteBasketResponse {
}
